examples/negative/parser_syntax/taxon_decl_unsupported.kai
# Negative fixture (parser): `taxon` is reserved for the kind system,
# which is not implemented yet. A top-level `taxon` declaration must be
# rejected with a clear "not yet supported" diagnostic rather than a
# cryptic "expected fn/type/..." error.

taxon Foo {}

fn main() : Int = 0
